Fix issues with configs leading to decoder errors, add command to realign progression to current reputation #60

--- a/build.gradle
+++ b/build.gradle
@@ -157,6 +157,7 @@ dependencies {
 
     implementation fg.deobf("curse.maven:amendments-896746:5200593")
     implementation fg.deobf("curse.maven:selene-499980:5201144")
+    implementation fg.deobf("curse.maven:spit-it-out-857141:4888754")
 
     implementation(annotationProcessor("com.github.llamalad7.mixinextras:mixinextras-common:0.2.0-beta.8"))
     implementation("com.github.llamalad7.mixinextras:mixinextras-forge:0.2.0-beta.8")
